deploy: e18e78af0eeed9e46d009af4d2d794770531f45d

--- a/404.html
+++ b/404.html
@@ -5,41 +5,41 @@
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta name=referrer content="strict-origin-when-cross-origin">
-<base href=https://example.com>
+<base href=https://raiots.github.io/solweb/>
 <meta name=description content="智慧海洋实验室">
 <meta name=author content="智慧海洋实验室">
 <meta property="og:title" content="404 Page not found | 智慧海洋实验室">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://example.com/404.html">
-<meta property="og:image" content="https://example.com/images/osprey-delight.png">
-<link rel=icon type=image/png href=https://example.com/favicon.png>
+<meta property="og:url" content="https://raiots.github.io/solweb/404.html">
+<meta property="og:image" content="https://raiots.github.io/images/osprey-delight.png">
+<link rel=icon type=image/png href=https://raiots.github.io/solweb/favicon.png>
 <meta property="og:description" content="智慧海洋实验室">
-<link rel=canonical href=https://example.com/404.html>
-<link rel=stylesheet href=https://example.com/style.50d21c2a46dd2131b146cced0a1990f3cc4a0e89ee8e318dfb5e6f9fc6ec4ba0.css>
-<script type=application/ld+json>{"@context":"http://www.schema.org","@id":"https://example.com","@type":"Person","description":"智慧海洋实验室","name":"智慧海洋实验室","sameAs":[],"url":"https://example.com"}</script>
-<script src=https://example.com/lazyimg/lazysizes/lazysizes.min.js async></script>
+<link rel=canonical href=https://raiots.github.io/solweb/404.html>
+<link rel=stylesheet href=https://raiots.github.io/solweb/style.c12ad9de8beba0282dbfc1d86e6026f30256265e6a9bab9e3aea4c3ab7ddb496.css>
+<script type=application/ld+json>{"@context":"http://www.schema.org","@id":"https://raiots.github.io/solweb/","@type":"Person","description":"智慧海洋实验室","name":"智慧海洋实验室","sameAs":[],"url":"https://raiots.github.io/solweb/"}</script>
+<script src=https://raiots.github.io/solweb/lazyimg/lazysizes/lazysizes.min.js async></script>
 <script>window.addEventListener('DOMContentLoaded',i=>{var f=document.getElementsByClassName('home-logo')[0],c=document.getElementsByClassName('logo')[0],d=document.getElementsByClassName('bg')[0],b=document.getElementsByClassName('gallery-img-container'),e=document.getElementsByClassName('modal-header-img-container'),a,h;if(f&&c&&d&&b&&e){function g(a,f){filter='filter: hue-rotate('+a+'deg); transition: '+f+'ms linear',c.style=filter,d.style=filter;for(let a=0;a<b.length;a++)b[a].style=filter,e[a].style=filter}a=0,h=0,f.addEventListener('click',()=>{for(deg=Math.floor(Math.random()*360);Math.abs(deg-a)<36;)deg=Math.floor(Math.random()*360);g(deg,Math.abs(deg-a)/36/10*1e3),a=deg,h++})}})</script>
 </head>
 <body>
 <nav class="row middle-xs center-xs nav-fixed nav-shadow">
 <div class="col-xs-6 col-sm-1 logo" style=visibility:visible>
-<a href=/#>
+<a href=/solweb/#>
 <picture>
-<source type=image/webp height=96 width=96 data-sizes=auto data-srcset="https://example.com/smartoceanLogo-66x.webp 66w,
-https://example.com/smartoceanLogo-96x.webp 96w">
-<img data-src=https://example.com/smartoceanLogo-96x.png class=lazyload height=96 width=96 data-sizes=auto data-srcset="https://example.com/smartoceanLogo-66x.png 66w,
-https://example.com/smartoceanLogo-96x.png 96w" alt=Home>
+<source type=image/webp height=96 width=96 data-sizes=auto data-srcset="https://raiots.github.io/solweb/smartoceanLogo-66x.webp 66w,
+https://raiots.github.io/solweb/smartoceanLogo-96x.webp 96w">
+<img data-src=https://raiots.github.io/solweb/smartoceanLogo-96x.png class=lazyload height=96 width=96 data-sizes=auto data-srcset="https://raiots.github.io/solweb/smartoceanLogo-66x.png 66w,
+https://raiots.github.io/solweb/smartoceanLogo-96x.png 96w" alt=Home>
 </picture>
 </a>
 </div>
 <div class="col-xs-3 col-sm-2 nav-item">
-<h3><a href=/#about>关于</a></h3>
+<h3><a href=/solweb/#about>关于</a></h3>
 </div>
 <div class="col-xs-3 col-sm-2 nav-item">
-<h3><a href=/#work>Work</a></h3>
+<h3><a href=/solweb/#work>Work</a></h3>
 </div>
 <div class="col-xs-3 col-sm-2 nav-item">
-<h3><a href=/#blog>Blog</a></h3>
+<h3><a href=/solweb/#blog>Blog</a></h3>
 </div>
 <div class="col-xs-6 col-sm-1 nav-toggle" style=visibility:visible>
 <a href class=nav-icon onclick=return!1><svg class="icon"><use xlink:href="#icon-menu"/></svg>
@@ -49,9 +49,9 @@ https://example.com/smartoceanLogo-96x.png 96w" alt=Home>
 <section class="nav-full row middle-xs center-xs">
 <div class=col-xs-12>
 <div class="row middle-xs center-xs">
-<div class=col-xs-12><h1><a href=/#about>关于</a></h1></div>
-<div class=col-xs-12><h1><a href=/#work>Work</a></h1></div>
-<div class=col-xs-12><h1><a href=/#blog>Blog</a></h1></div>
+<div class=col-xs-12><h1><a href=/solweb/#about>关于</a></h1></div>
+<div class=col-xs-12><h1><a href=/solweb/#work>Work</a></h1></div>
+<div class=col-xs-12><h1><a href=/solweb/#blog>Blog</a></h1></div>
 </div>
 </div>
 </section>
@@ -62,16 +62,13 @@ https://example.com/smartoceanLogo-96x.png 96w" alt=Home>
 <p>Sorry, the requested page does not exist.</p>
 <div style=transform:rotate(-180deg);text-align:center><p id=noChoiceFound>The 🍰 is a lie!</p></div>
 <div id=foundChoices hidden>We can offer you the following similar page(s):</div>
-<ul id=choices hidden><li class=choice>[Gallery]
-<a href=https://example.com/gallery/>🔗 Galleries</a></li><li class=choice>[Gallery]
-<a href=https://example.com/gallery/lazyimg/>🔗 lazyimg</a></li><li class=choice>
-<a href=https://example.com/>🔗 智慧海洋实验室</a></li><li class=choice>[Gallery]
-<a href=https://example.com/gallery/icons/>🔗 Icons</a></li><li class=choice>[Blog]
-<a href=https://example.com/blog/>🔗 Blogs</a></li><li class=choice>[Blog]
-<a href=https://example.com/blog/icons/>🔗 Introducing an icon module that scales</a></li><li class=choice>
-<a href=https://example.com/about/>🔗 Hugo Community Modules</a></li>
+<ul id=choices hidden><li class=choice>
+<a href=https://raiots.github.io/solweb/about/>🔗 关于我们</a></li><li class=choice>[Blog]
+<a href=https://raiots.github.io/solweb/blog/>🔗 Blogs</a></li><li class=choice>[Blog]
+<a href=https://raiots.github.io/solweb/blog/icons/>🔗 Introducing an icon module that scales</a></li><li class=choice>
+<a href=https://raiots.github.io/solweb/>🔗 智慧海洋实验室</a></li>
 </ul>
-<script type=application/json id=jsonContent>["gallery Galleries  https://example.com/gallery/","gallery lazyimg  https://example.com/gallery/lazyimg/"," 智慧海洋实验室  https://example.com/","gallery Icons  https://example.com/gallery/icons/","blog Blogs  https://example.com/blog/","blog Introducing an icon module that scales hugo-mods/icons - Introducing an icon module that scales. https://example.com/blog/icons/"," Hugo Community Modules Hugo Community Mods https://example.com/about/"]</script>
+<script type=application/json id=jsonContent>[" 关于我们 智慧 https://raiots.github.io/solweb/about/","blog Blogs  https://raiots.github.io/solweb/blog/","blog Introducing an icon module that scales hugo-mods/icons - Introducing an icon module that scales. https://raiots.github.io/solweb/blog/icons/"," 智慧海洋实验室  https://raiots.github.io/solweb/"]</script>
 </div>
 </div>
 </main>
