--- a/about/index.html
+++ b/about/index.html
@@ -1,45 +1,45 @@
 <!doctype html><html lang=en-us>
 <head>
-<title>Hugo Community Modules | 智慧海洋实验室</title>
-<meta name=title content="Hugo Community Modules | 智慧海洋实验室">
+<title>关于我们 | 智慧海洋实验室</title>
+<meta name=title content="关于我们 | 智慧海洋实验室">
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta name=referrer content="strict-origin-when-cross-origin">
-<base href=https://example.com>
-<meta name=description content="Hugo Community Mods">
+<base href=https://raiots.github.io/solweb/>
+<meta name=description content="智慧">
 <meta name=author content="智慧海洋实验室">
-<meta property="og:title" content="Hugo Community Modules | 智慧海洋实验室">
+<meta property="og:title" content="关于我们 | 智慧海洋实验室">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://example.com/about/">
-<meta property="og:image" content="https://example.com/images/osprey-delight.png">
-<link rel=icon type=image/png href=https://example.com/favicon.png>
-<meta name=og:description content="Hugo Community Mods">
-<link rel=canonical href=https://example.com/about/>
-<link rel=stylesheet href=https://example.com/style.50d21c2a46dd2131b146cced0a1990f3cc4a0e89ee8e318dfb5e6f9fc6ec4ba0.css>
-<script type=application/ld+json>{"@context":"http://www.schema.org","@id":"https://example.com","@type":"Person","description":"智慧海洋实验室","name":"智慧海洋实验室","sameAs":[],"url":"https://example.com"}</script>
-<script src=https://example.com/lazyimg/lazysizes/lazysizes.min.js async></script>
+<meta property="og:url" content="https://raiots.github.io/solweb/about/">
+<meta property="og:image" content="https://raiots.github.io/images/osprey-delight.png">
+<link rel=icon type=image/png href=https://raiots.github.io/solweb/favicon.png>
+<meta name=og:description content="智慧">
+<link rel=canonical href=https://raiots.github.io/solweb/about/>
+<link rel=stylesheet href=https://raiots.github.io/solweb/style.c12ad9de8beba0282dbfc1d86e6026f30256265e6a9bab9e3aea4c3ab7ddb496.css>
+<script type=application/ld+json>{"@context":"http://www.schema.org","@id":"https://raiots.github.io/solweb/","@type":"Person","description":"智慧海洋实验室","name":"智慧海洋实验室","sameAs":[],"url":"https://raiots.github.io/solweb/"}</script>
+<script src=https://raiots.github.io/solweb/lazyimg/lazysizes/lazysizes.min.js async></script>
 <script>window.addEventListener('DOMContentLoaded',i=>{var f=document.getElementsByClassName('home-logo')[0],c=document.getElementsByClassName('logo')[0],d=document.getElementsByClassName('bg')[0],b=document.getElementsByClassName('gallery-img-container'),e=document.getElementsByClassName('modal-header-img-container'),a,h;if(f&&c&&d&&b&&e){function g(a,f){filter='filter: hue-rotate('+a+'deg); transition: '+f+'ms linear',c.style=filter,d.style=filter;for(let a=0;a<b.length;a++)b[a].style=filter,e[a].style=filter}a=0,h=0,f.addEventListener('click',()=>{for(deg=Math.floor(Math.random()*360);Math.abs(deg-a)<36;)deg=Math.floor(Math.random()*360);g(deg,Math.abs(deg-a)/36/10*1e3),a=deg,h++})}})</script>
 </head>
 <body>
 <nav class="row middle-xs center-xs nav-fixed nav-shadow">
 <div class="col-xs-6 col-sm-1 logo" style=visibility:visible>
-<a href=/#>
+<a href=/solweb/#>
 <picture>
-<source type=image/webp height=96 width=96 data-sizes=auto data-srcset="https://example.com/smartoceanLogo-66x.webp 66w,
-https://example.com/smartoceanLogo-96x.webp 96w">
-<img data-src=https://example.com/smartoceanLogo-96x.png class=lazyload height=96 width=96 data-sizes=auto data-srcset="https://example.com/smartoceanLogo-66x.png 66w,
-https://example.com/smartoceanLogo-96x.png 96w" alt=Home>
+<source type=image/webp height=96 width=96 data-sizes=auto data-srcset="https://raiots.github.io/solweb/smartoceanLogo-66x.webp 66w,
+https://raiots.github.io/solweb/smartoceanLogo-96x.webp 96w">
+<img data-src=https://raiots.github.io/solweb/smartoceanLogo-96x.png class=lazyload height=96 width=96 data-sizes=auto data-srcset="https://raiots.github.io/solweb/smartoceanLogo-66x.png 66w,
+https://raiots.github.io/solweb/smartoceanLogo-96x.png 96w" alt=Home>
 </picture>
 </a>
 </div>
 <div class="col-xs-3 col-sm-2 nav-item">
-<h3><a href=/#about>关于</a></h3>
+<h3><a href=/solweb/#about>关于</a></h3>
 </div>
 <div class="col-xs-3 col-sm-2 nav-item">
-<h3><a href=/#work>Work</a></h3>
+<h3><a href=/solweb/#work>Work</a></h3>
 </div>
 <div class="col-xs-3 col-sm-2 nav-item">
-<h3><a href=/#blog>Blog</a></h3>
+<h3><a href=/solweb/#blog>Blog</a></h3>
 </div>
 <div class="col-xs-6 col-sm-1 nav-toggle" style=visibility:visible>
 <a href class=nav-icon onclick=return!1><svg class="icon"><use xlink:href="#icon-menu"/></svg>
@@ -49,38 +49,21 @@ https://example.com/smartoceanLogo-96x.png 96w" alt=Home>
 <section class="nav-full row middle-xs center-xs">
 <div class=col-xs-12>
 <div class="row middle-xs center-xs">
-<div class=col-xs-12><h1><a href=/#about>关于</a></h1></div>
-<div class=col-xs-12><h1><a href=/#work>Work</a></h1></div>
-<div class=col-xs-12><h1><a href=/#blog>Blog</a></h1></div>
+<div class=col-xs-12><h1><a href=/solweb/#about>关于</a></h1></div>
+<div class=col-xs-12><h1><a href=/solweb/#work>Work</a></h1></div>
+<div class=col-xs-12><h1><a href=/solweb/#blog>Blog</a></h1></div>
 </div>
 </div>
 </section>
 <main>
 <section class=container>
 <section class=content>
-<h1> Hugo Community Modules </h1>
+<h1> 关于我们 </h1>
 <div class=sub-header>
-November 22, 2021 · One minute read
+January 18, 2024 · One minute read
 </div>
 <article class=entry-content>
-<p>Welcome! This page is all about user-friendly modules for <a href=https://gohugo.io/>Hugo</a>, a fast static site generator.
-The <a href=https://github.com/hugo-mods/>hugo-mods organization</a> is where all the repos are!</p>
-<p>Below you can find all currently available modules which you can easily use to power up your site or theme.
-Fun fact: The entire page makes use of the modules itself, showing you how they look fully integrated!</p>
-<div id=termynal-about data-termynal>
-<div class=term-content>
-<span data-ty=input data-ty-delay=500>hugo mod init github.com/username/your-repo</span>
-<span data-ty data-ty-delay>go: creating new go.mod: module github.com/username/your-repo</span>
-<span data-ty=input data-ty-delay>$EDITOR config.yaml</span>
-<span data-ty data-ty-delay>[[module.imports]]</span>
-<span data-ty data-ty-delay>path = "github.com/hugo-mods/icons"</span>
-<span data-ty=input data-ty-delay=500>hugo mod get -u</span>
-<span data-ty data-ty-delay>hugo: downloading modules …</span>
-<span data-ty data-ty-delay=0>✓ hugo: collected modules in 3372 ms</span>
-</div>
-</div>
-<p>Made with
-<svg class="icon" id="heart"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3.0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"/></svg></svg> by <a href=https://kdevo.github.io/>kdevo</a>.</p>
+<p>海洋科学与技术学院智慧海洋实验室（以下简称实验室）是由学院老师指导、本科生主导的创新创意实践平台。自2017年实验室成立以来，主要承担学院海洋工程装备、海洋工程仪器设备的智能化工作，经过多年的发展，实验室现已具备 完整的智能海洋装备与智能仪器设备的研发、测试能力。</p>
 </article>
 <div class=pagination>
 </div>
