deploy: a788df53214718c923b5a320a494dfd543b231ad

--- a/index.html
+++ b/index.html
@@ -115,6 +115,12 @@ https://raiots.github.io/solweb/smartoceanLogo-96x.png 96w" alt=Home>
 November 28, 2021 · 5 minutes read
 </div>
 </article>
+<article>
+<h2><a href=https://raiots.github.io/solweb/blog/dragon/>“腾蛇号”面向极地季节性冰区的两栖航行器</a></h2>
+<div class=sub-header>
+January 1, 0001 · One minute read
+</div>
+</article>
 </div>
 </div>
 <div class="row center-xs">
