deploy: 572f4909a46776f45d814f2cbe8dd7dec99e90e9

--- a/gallery/machine_learning/index.html
+++ b/gallery/machine_learning/index.html
@@ -1,20 +1,20 @@
 <!doctype html><html lang=en-us>
 <head>
-<title>Osprey Delight | 智慧海洋实验室</title>
-<meta name=title content="Osprey Delight | 智慧海洋实验室">
+<title>Osprey | 智慧海洋实验室</title>
+<meta name=title content="Osprey | 智慧海洋实验室">
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta name=referrer content="strict-origin-when-cross-origin">
 <base href=https://raiots.github.io/solweb/>
 <meta name=description content="智慧海洋实验室">
 <meta name=author content="智慧海洋实验室">
-<meta property="og:title" content="Osprey Delight | 智慧海洋实验室">
+<meta property="og:title" content="Osprey | 智慧海洋实验室">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://raiots.github.io/solweb/gallery/osprey-delight/">
+<meta property="og:url" content="https://raiots.github.io/solweb/gallery/machine_learning/">
 <meta property="og:image" content="https://raiots.github.io/images/osprey-delight.png">
 <link rel=icon type=image/png href=https://raiots.github.io/solweb/favicon.png>
 <meta property="og:description" content="智慧海洋实验室">
-<link rel=canonical href=https://raiots.github.io/solweb/gallery/osprey-delight/>
+<link rel=canonical href=https://raiots.github.io/solweb/gallery/machine_learning/>
 <link rel=stylesheet href=https://raiots.github.io/solweb/style.c12ad9de8beba0282dbfc1d86e6026f30256265e6a9bab9e3aea4c3ab7ddb496.css>
 <script type=application/ld+json>{"@context":"http://www.schema.org","@id":"https://raiots.github.io/solweb/","@type":"Person","description":"智慧海洋实验室","name":"智慧海洋实验室","sameAs":[],"url":"https://raiots.github.io/solweb/"}</script>
 <script src=https://raiots.github.io/solweb/lazyimg/lazysizes/lazysizes.min.js async></script>
@@ -58,16 +58,14 @@ https://raiots.github.io/solweb/smartoceanLogo-96x.png 96w" alt=Home>
 <main>
 <section class=container>
 <section class=content>
-<h1> Osprey Delight </h1>
+<h1> Osprey </h1>
 <div class=sub-header>
-September 18, 2019 · One minute read
+May 15, 2017 · 0 minutes read
 </div>
 <article class=entry-content>
-<p>{github-description}
-Check it out!</p>
 </article>
 <div class=pagination>
-<a href=https://raiots.github.io/solweb/gallery/kdevo/>&#171; KDEVO</a>
+<a href=https://raiots.github.io/solweb/gallery/mech/>Hugo &#187;</a>
 </div>
 </section>
 <br>
