--- a/gallery/machine_learning/index.html
+++ b/gallery/machine_learning/index.html
@@ -1,14 +1,14 @@
 <!doctype html><html lang=en-us>
 <head>
-<title>Osprey | 智慧海洋实验室</title>
-<meta name=title content="Osprey | 智慧海洋实验室">
+<title>机器学习与视觉 | 智慧海洋实验室</title>
+<meta name=title content="机器学习与视觉 | 智慧海洋实验室">
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta name=referrer content="strict-origin-when-cross-origin">
 <base href=https://raiots.github.io/solweb/>
 <meta name=description content="智慧海洋实验室">
 <meta name=author content="智慧海洋实验室">
-<meta property="og:title" content="Osprey | 智慧海洋实验室">
+<meta property="og:title" content="机器学习与视觉 | 智慧海洋实验室">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://raiots.github.io/solweb/gallery/machine_learning/">
 <meta property="og:image" content="https://raiots.github.io/images/osprey-delight.png">
@@ -58,14 +58,14 @@ https://raiots.github.io/solweb/smartoceanLogo-96x.png 96w" alt=Home>
 <main>
 <section class=container>
 <section class=content>
-<h1> Osprey </h1>
+<h1> 机器学习与视觉 </h1>
 <div class=sub-header>
 May 15, 2017 · 0 minutes read
 </div>
 <article class=entry-content>
 </article>
 <div class=pagination>
-<a href=https://raiots.github.io/solweb/gallery/mech/>Hugo &#187;</a>
+<a href=https://raiots.github.io/solweb/gallery/elec/>电子与控制 &#187;</a>
 </div>
 </section>
 <br>
