deploy: 0529a983acf8f8d59fae6d4d09d791055973aa4d

--- a/gallery/machine_learning/index.html
+++ b/gallery/machine_learning/index.html
@@ -60,9 +60,10 @@ https://raiots.github.io/solweb/smartoceanLogo-96x.png 96w" alt=Home>
 <section class=content>
 <h1> 机器学习与视觉 </h1>
 <div class=sub-header>
-May 15, 2017 · 0 minutes read
+May 15, 2017 · One minute read
 </div>
 <article class=entry-content>
+<p>为实验室提供目标检测算法等深度学习的工程实现与应用、上位机程序开发、实验室网站运维等工作。主要技术栈：Pytorch、Python、Go、C、Linux运维</p>
 </article>
 <div class=pagination>
 <a href=https://raiots.github.io/solweb/gallery/elec/>电子与控制 &#187;</a>
