deploy: f379bdbe43dedba9960c22ccf520fc426acdc05f

--- a/gallery/machine_learning/index.html
+++ b/gallery/machine_learning/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv=refresh content="0; url=https://raiots.github.io/solweb/#machine_learning">
+<meta http-equiv=refresh content="0; url=https://solorg.netlify.app#machine_learning">
