--- a/404.html
+++ b/404.html
@@ -5,41 +5,41 @@
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta name=referrer content="strict-origin-when-cross-origin">
-<base href=https://raiots.github.io/solweb/>
+<base href=https://solorg.netlify.app>
 <meta name=description content="智慧海洋实验室">
 <meta name=author content="智慧海洋实验室">
 <meta property="og:title" content="404 Page not found | 智慧海洋实验室">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://raiots.github.io/solweb/404.html">
-<meta property="og:image" content="https://raiots.github.io/images/osprey-delight.png">
-<link rel=icon type=image/png href=https://raiots.github.io/solweb/favicon.png>
+<meta property="og:url" content="https://solorg.netlify.app/404.html">
+<meta property="og:image" content="https://solorg.netlify.app/images/osprey-delight.png">
+<link rel=icon type=image/png href=https://solorg.netlify.app/favicon.png>
 <meta property="og:description" content="智慧海洋实验室">
-<link rel=canonical href=https://raiots.github.io/solweb/404.html>
-<link rel=stylesheet href=https://raiots.github.io/solweb/style.c12ad9de8beba0282dbfc1d86e6026f30256265e6a9bab9e3aea4c3ab7ddb496.css>
-<script type=application/ld+json>{"@context":"http://www.schema.org","@id":"https://raiots.github.io/solweb/","@type":"Person","description":"智慧海洋实验室","name":"智慧海洋实验室","sameAs":[],"url":"https://raiots.github.io/solweb/"}</script>
-<script src=https://raiots.github.io/solweb/lazyimg/lazysizes/lazysizes.min.js async></script>
+<link rel=canonical href=https://solorg.netlify.app/404.html>
+<link rel=stylesheet href=https://solorg.netlify.app/style.a820110144ed5c42dc7ab7e4c58f5d3af90196f29d198e360720874fc27a1478.css>
+<script type=application/ld+json>{"@context":"http://www.schema.org","@id":"https://solorg.netlify.app","@type":"Person","description":"智慧海洋实验室","name":"智慧海洋实验室","sameAs":[],"url":"https://solorg.netlify.app"}</script>
+<script src=https://solorg.netlify.app/lazyimg/lazysizes/lazysizes.min.js async></script>
 <script>window.addEventListener('DOMContentLoaded',i=>{var f=document.getElementsByClassName('home-logo')[0],c=document.getElementsByClassName('logo')[0],d=document.getElementsByClassName('bg')[0],b=document.getElementsByClassName('gallery-img-container'),e=document.getElementsByClassName('modal-header-img-container'),a,h;if(f&&c&&d&&b&&e){function g(a,f){filter='filter: hue-rotate('+a+'deg); transition: '+f+'ms linear',c.style=filter,d.style=filter;for(let a=0;a<b.length;a++)b[a].style=filter,e[a].style=filter}a=0,h=0,f.addEventListener('click',()=>{for(deg=Math.floor(Math.random()*360);Math.abs(deg-a)<36;)deg=Math.floor(Math.random()*360);g(deg,Math.abs(deg-a)/36/10*1e3),a=deg,h++})}})</script>
 </head>
 <body>
 <nav class="row middle-xs center-xs nav-fixed nav-shadow">
 <div class="col-xs-6 col-sm-1 logo" style=visibility:visible>
-<a href=/solweb/#>
+<a href=/#>
 <picture>
-<source type=image/webp height=96 width=96 data-sizes=auto data-srcset="https://raiots.github.io/solweb/smartoceanLogo-66x.webp 66w,
-https://raiots.github.io/solweb/smartoceanLogo-96x.webp 96w">
-<img data-src=https://raiots.github.io/solweb/smartoceanLogo-96x.png class=lazyload height=96 width=96 data-sizes=auto data-srcset="https://raiots.github.io/solweb/smartoceanLogo-66x.png 66w,
-https://raiots.github.io/solweb/smartoceanLogo-96x.png 96w" alt=Home>
+<source type=image/webp height=96 width=96 data-sizes=auto data-srcset="https://solorg.netlify.app/smartoceanLogo-66x.webp 66w,
+https://solorg.netlify.app/smartoceanLogo-96x.webp 96w">
+<img data-src=https://solorg.netlify.app/smartoceanLogo-96x.png class=lazyload height=96 width=96 data-sizes=auto data-srcset="https://solorg.netlify.app/smartoceanLogo-66x.png 66w,
+https://solorg.netlify.app/smartoceanLogo-96x.png 96w" alt=Home>
 </picture>
 </a>
 </div>
 <div class="col-xs-3 col-sm-2 nav-item">
-<h3><a href=/solweb/#about>关于</a></h3>
+<h3><a href=/#about>关于</a></h3>
 </div>
 <div class="col-xs-3 col-sm-2 nav-item">
-<h3><a href=/solweb/#work>Work</a></h3>
+<h3><a href=/#work>Work</a></h3>
 </div>
 <div class="col-xs-3 col-sm-2 nav-item">
-<h3><a href=/solweb/#blog>博客</a></h3>
+<h3><a href=/#blog>博客</a></h3>
 </div>
 <div class="col-xs-6 col-sm-1 nav-toggle" style=visibility:visible>
 <a href class=nav-icon onclick=return!1><svg class="icon"><use xlink:href="#icon-menu"/></svg>
@@ -49,9 +49,9 @@ https://raiots.github.io/solweb/smartoceanLogo-96x.png 96w" alt=Home>
 <section class="nav-full row middle-xs center-xs">
 <div class=col-xs-12>
 <div class="row middle-xs center-xs">
-<div class=col-xs-12><h1><a href=/solweb/#about>关于</a></h1></div>
-<div class=col-xs-12><h1><a href=/solweb/#work>Work</a></h1></div>
-<div class=col-xs-12><h1><a href=/solweb/#blog>博客</a></h1></div>
+<div class=col-xs-12><h1><a href=/#about>关于</a></h1></div>
+<div class=col-xs-12><h1><a href=/#work>Work</a></h1></div>
+<div class=col-xs-12><h1><a href=/#blog>博客</a></h1></div>
 </div>
 </div>
 </section>
@@ -63,21 +63,21 @@ https://raiots.github.io/solweb/smartoceanLogo-96x.png 96w" alt=Home>
 <div style=transform:rotate(-180deg);text-align:center><p id=noChoiceFound>The 🍰 is a lie!</p></div>
 <div id=foundChoices hidden>We can offer you the following similar page(s):</div>
 <ul id=choices hidden><li class=choice>[Gallery]
-<a href=https://raiots.github.io/solweb/gallery/mech/>🔗 机械与结构</a></li><li class=choice>[Gallery]
-<a href=https://raiots.github.io/solweb/gallery/elec/>🔗 电子与控制</a></li><li class=choice>[Gallery]
-<a href=https://raiots.github.io/solweb/gallery/machine_learning/>🔗 机器学习与视觉</a></li><li class=choice>
-<a href=https://raiots.github.io/solweb/about/>🔗 关于我们</a></li><li class=choice>[Blog]
-<a href=https://raiots.github.io/solweb/blog/>🔗 Blogs</a></li><li class=choice>
-<a href=https://raiots.github.io/solweb/>🔗 智慧海洋实验室</a></li><li class=choice>[Blog]
-<a href=https://raiots.github.io/solweb/blog/%E8%87%B4%E6%96%B0%E7%94%9F%E7%9A%84%E4%B8%80%E5%B0%81%E4%BF%A1-%EF%B8%8F%E6%99%BA%E6%85%A7%E6%B5%B7%E6%B4%8B%E5%AE%9E%E9%AA%8C%E5%AE%A4/>🔗 致新生的一封信</a></li><li class=choice>[Blog]
-<a href=https://raiots.github.io/solweb/blog/%E5%85%B3%E4%BA%8E%E6%B5%B7%E6%B4%8B%E7%A7%91%E5%AD%A6%E4%B8%8E%E6%8A%80%E6%9C%AF%E5%AD%A6%E9%99%A2%E6%99%BA%E6%85%A7%E6%B5%B7%E6%B4%8B%E5%AE%9E%E9%AA%8C%E5%AE%A42023%E5%B9%B4%E7%A7%8B%E5%AD%A3%E7%BA%B3%E6%96%B0%E7%9A%84%E9%80%9A%E7%9F%A5-%EF%B8%8F%E6%99%BA%E6%85%A7%E6%B5%B7%E6%B4%8B%E5%AE%9E%E9%AA%8C%E5%AE%A4/>🔗 关于海洋科学与技术学院智慧海洋实验室2023年秋季纳新的通知</a></li><li class=choice>[Blog]
-<a href=https://raiots.github.io/solweb/blog/%E6%99%BA%E6%85%A7%E6%B5%B7%E6%B4%8B%E5%AE%9E%E9%AA%8C%E5%AE%A4%E5%8F%91%E5%B8%83%E6%96%B0%E7%89%88%E5%AE%9E%E9%AA%8C%E5%AE%A4%E7%AE%A1%E7%90%86%E8%A7%84%E8%8C%832023-%EF%B8%8F%E6%99%BA%E6%85%A7%E6%B5%B7%E6%B4%8B%E5%AE%9E%E9%AA%8C%E5%AE%A4/>🔗 智慧海洋实验室发布新版实验室管理规范（2023）</a></li><li class=choice>[Blog]
-<a href=https://raiots.github.io/solweb/blog/masterball-%E5%A4%A7%E5%B8%88%E7%90%83%E5%8F%8C%E5%BD%A2%E6%80%81%E6%9C%BA%E5%99%A8%E4%BA%BA-%EF%B8%8F%E6%99%BA%E6%85%A7%E6%B5%B7%E6%B4%8B%E5%AE%9E%E9%AA%8C%E5%AE%A4/>🔗 MasterBall | 大师球双形态机器人</a></li><li class=choice>[Blog]
-<a href=https://raiots.github.io/solweb/blog/dragon/>🔗 “腾蛇号”面向极地季节性冰区的两栖航行器</a></li><li class=choice>[Blog]
-<a href=https://raiots.github.io/solweb/blog/mnist/>🔗 基于Mnist Fashion数据集的卷积神经网络</a></li><li class=choice>[Gallery]
-<a href=https://raiots.github.io/solweb/gallery/>🔗 Galleries</a></li>
+<a href=https://solorg.netlify.app/gallery/mech/>🔗 机械与结构</a></li><li class=choice>[Gallery]
+<a href=https://solorg.netlify.app/gallery/elec/>🔗 电子与控制</a></li><li class=choice>[Gallery]
+<a href=https://solorg.netlify.app/gallery/machine_learning/>🔗 机器学习与视觉</a></li><li class=choice>
+<a href=https://solorg.netlify.app/about/>🔗 关于我们</a></li><li class=choice>[Blog]
+<a href=https://solorg.netlify.app/blog/>🔗 Blogs</a></li><li class=choice>
+<a href=https://solorg.netlify.app/>🔗 智慧海洋实验室</a></li><li class=choice>[Blog]
+<a href=https://solorg.netlify.app/blog/%E8%87%B4%E6%96%B0%E7%94%9F%E7%9A%84%E4%B8%80%E5%B0%81%E4%BF%A1-%EF%B8%8F%E6%99%BA%E6%85%A7%E6%B5%B7%E6%B4%8B%E5%AE%9E%E9%AA%8C%E5%AE%A4/>🔗 致新生的一封信</a></li><li class=choice>[Blog]
+<a href=https://solorg.netlify.app/blog/%E5%85%B3%E4%BA%8E%E6%B5%B7%E6%B4%8B%E7%A7%91%E5%AD%A6%E4%B8%8E%E6%8A%80%E6%9C%AF%E5%AD%A6%E9%99%A2%E6%99%BA%E6%85%A7%E6%B5%B7%E6%B4%8B%E5%AE%9E%E9%AA%8C%E5%AE%A42023%E5%B9%B4%E7%A7%8B%E5%AD%A3%E7%BA%B3%E6%96%B0%E7%9A%84%E9%80%9A%E7%9F%A5-%EF%B8%8F%E6%99%BA%E6%85%A7%E6%B5%B7%E6%B4%8B%E5%AE%9E%E9%AA%8C%E5%AE%A4/>🔗 关于海洋科学与技术学院智慧海洋实验室2023年秋季纳新的通知</a></li><li class=choice>[Blog]
+<a href=https://solorg.netlify.app/blog/%E6%99%BA%E6%85%A7%E6%B5%B7%E6%B4%8B%E5%AE%9E%E9%AA%8C%E5%AE%A4%E5%8F%91%E5%B8%83%E6%96%B0%E7%89%88%E5%AE%9E%E9%AA%8C%E5%AE%A4%E7%AE%A1%E7%90%86%E8%A7%84%E8%8C%832023-%EF%B8%8F%E6%99%BA%E6%85%A7%E6%B5%B7%E6%B4%8B%E5%AE%9E%E9%AA%8C%E5%AE%A4/>🔗 智慧海洋实验室发布新版实验室管理规范（2023）</a></li><li class=choice>[Blog]
+<a href=https://solorg.netlify.app/blog/masterball-%E5%A4%A7%E5%B8%88%E7%90%83%E5%8F%8C%E5%BD%A2%E6%80%81%E6%9C%BA%E5%99%A8%E4%BA%BA-%EF%B8%8F%E6%99%BA%E6%85%A7%E6%B5%B7%E6%B4%8B%E5%AE%9E%E9%AA%8C%E5%AE%A4/>🔗 MasterBall | 大师球双形态机器人</a></li><li class=choice>[Blog]
+<a href=https://solorg.netlify.app/blog/dragon/>🔗 “腾蛇号”面向极地季节性冰区的两栖航行器</a></li><li class=choice>[Blog]
+<a href=https://solorg.netlify.app/blog/mnist/>🔗 基于Mnist Fashion数据集的卷积神经网络</a></li><li class=choice>[Gallery]
+<a href=https://solorg.netlify.app/gallery/>🔗 Galleries</a></li>
 </ul>
-<script type=application/json id=jsonContent>["gallery 机械与结构  https://raiots.github.io/solweb/gallery/mech/","gallery 电子与控制  https://raiots.github.io/solweb/gallery/elec/","gallery 机器学习与视觉  https://raiots.github.io/solweb/gallery/machine_learning/"," 关于我们 智慧 https://raiots.github.io/solweb/about/","blog Blogs  https://raiots.github.io/solweb/blog/"," 智慧海洋实验室  https://raiots.github.io/solweb/","blog 致新生的一封信 亲爱的学弟学妹们： 欢迎大家来到大工大家庭！智慧海洋实验室向你们表示热烈的欢迎和诚挚的祝福。作为新生，你们将开始一段全新的旅程，这是一个充满无限可能性的阶段，因此，智慧海洋实验室诚挚邀请大家与学长学姐 … https://raiots.github.io/solweb/blog/%E8%87%B4%E6%96%B0%E7%94%9F%E7%9A%84%E4%B8%80%E5%B0%81%E4%BF%A1-%EF%B8%8F%E6%99%BA%E6%85%A7%E6%B5%B7%E6%B4%8B%E5%AE%9E%E9%AA%8C%E5%AE%A4/","blog 关于海洋科学与技术学院智慧海洋实验室2023年秋季纳新的通知 海洋科学与技术学院智慧海洋实验室（以下简称实验室）是由学院老师指导、本科生主导的创新创意实践平台。自2017年实验室成立以来，主要承担学院海洋工程装备、海洋工程仪器设备的智能化工作，经过多年的发展，实 … https://raiots.github.io/solweb/blog/%E5%85%B3%E4%BA%8E%E6%B5%B7%E6%B4%8B%E7%A7%91%E5%AD%A6%E4%B8%8E%E6%8A%80%E6%9C%AF%E5%AD%A6%E9%99%A2%E6%99%BA%E6%85%A7%E6%B5%B7%E6%B4%8B%E5%AE%9E%E9%AA%8C%E5%AE%A42023%E5%B9%B4%E7%A7%8B%E5%AD%A3%E7%BA%B3%E6%96%B0%E7%9A%84%E9%80%9A%E7%9F%A5-%EF%B8%8F%E6%99%BA%E6%85%A7%E6%B5%B7%E6%B4%8B%E5%AE%9E%E9%AA%8C%E5%AE%A4/","blog 智慧海洋实验室发布新版实验室管理规范（2023） 尊敬的老师们、同学们： 智慧海洋实验室于近日制定了新的管理文件，包括智慧海洋实验室管理办法、实验室项目管理手册、实验室物资管理手册、智慧海洋实验室耗材采购报销上报模板、智慧海洋实验室常规器材借用管理表 … https://raiots.github.io/solweb/blog/%E6%99%BA%E6%85%A7%E6%B5%B7%E6%B4%8B%E5%AE%9E%E9%AA%8C%E5%AE%A4%E5%8F%91%E5%B8%83%E6%96%B0%E7%89%88%E5%AE%9E%E9%AA%8C%E5%AE%A4%E7%AE%A1%E7%90%86%E8%A7%84%E8%8C%832023-%EF%B8%8F%E6%99%BA%E6%85%A7%E6%B5%B7%E6%B4%8B%E5%AE%9E%E9%AA%8C%E5%AE%A4/","blog MasterBall | 大师球双形态机器人 随着智能机器人行业的快速发展，地面作业对机器人的依赖也越来越高。面对实际情况中的复杂地形，球-腿双形态机器人兼具球形机器人快速运动和多足机器人高避障能力的特点，具有更强的适应能力，是突破当前 … https://raiots.github.io/solweb/blog/masterball-%E5%A4%A7%E5%B8%88%E7%90%83%E5%8F%8C%E5%BD%A2%E6%80%81%E6%9C%BA%E5%99%A8%E4%BA%BA-%EF%B8%8F%E6%99%BA%E6%85%A7%E6%B5%B7%E6%B4%8B%E5%AE%9E%E9%AA%8C%E5%AE%A4/","blog “腾蛇号”面向极地季节性冰区的两栖航行器 水空两栖探测航行器分为两部分，分别是水下观测的自主遥控水下机器人（ARV）以及携带ARV飞抵目标海域的八旋翼无人机。通过八旋翼的绞盘收纳装置实现ARV的自主收纳与释放过程。可对极地季节性冰区、北温带海冰等人类及传统水下观测航行器难以抵达的海域进行海空一体探测。 https://raiots.github.io/solweb/blog/dragon/","blog 基于Mnist Fashion数据集的卷积神经网络 构建卷积神经网络模型（CNN）对fashion-mnist数据集进行分类(10类)。 https://raiots.github.io/solweb/blog/mnist/","gallery Galleries  https://raiots.github.io/solweb/gallery/"]</script>
+<script type=application/json id=jsonContent>["gallery 机械与结构  https://solorg.netlify.app/gallery/mech/","gallery 电子与控制  https://solorg.netlify.app/gallery/elec/","gallery 机器学习与视觉  https://solorg.netlify.app/gallery/machine_learning/"," 关于我们 智慧 https://solorg.netlify.app/about/","blog Blogs  https://solorg.netlify.app/blog/"," 智慧海洋实验室  https://solorg.netlify.app/","blog 致新生的一封信 亲爱的学弟学妹们： 欢迎大家来到大工大家庭！智慧海洋实验室向你们表示热烈的欢迎和诚挚的祝福。作为新生，你们将开始一段全新的旅程，这是一个充满无限可能性的阶段，因此，智慧海洋实验室诚挚邀请大家与学长学姐 … https://solorg.netlify.app/blog/%E8%87%B4%E6%96%B0%E7%94%9F%E7%9A%84%E4%B8%80%E5%B0%81%E4%BF%A1-%EF%B8%8F%E6%99%BA%E6%85%A7%E6%B5%B7%E6%B4%8B%E5%AE%9E%E9%AA%8C%E5%AE%A4/","blog 关于海洋科学与技术学院智慧海洋实验室2023年秋季纳新的通知 海洋科学与技术学院智慧海洋实验室（以下简称实验室）是由学院老师指导、本科生主导的创新创意实践平台。自2017年实验室成立以来，主要承担学院海洋工程装备、海洋工程仪器设备的智能化工作，经过多年的发展，实 … https://solorg.netlify.app/blog/%E5%85%B3%E4%BA%8E%E6%B5%B7%E6%B4%8B%E7%A7%91%E5%AD%A6%E4%B8%8E%E6%8A%80%E6%9C%AF%E5%AD%A6%E9%99%A2%E6%99%BA%E6%85%A7%E6%B5%B7%E6%B4%8B%E5%AE%9E%E9%AA%8C%E5%AE%A42023%E5%B9%B4%E7%A7%8B%E5%AD%A3%E7%BA%B3%E6%96%B0%E7%9A%84%E9%80%9A%E7%9F%A5-%EF%B8%8F%E6%99%BA%E6%85%A7%E6%B5%B7%E6%B4%8B%E5%AE%9E%E9%AA%8C%E5%AE%A4/","blog 智慧海洋实验室发布新版实验室管理规范（2023） 尊敬的老师们、同学们： 智慧海洋实验室于近日制定了新的管理文件，包括智慧海洋实验室管理办法、实验室项目管理手册、实验室物资管理手册、智慧海洋实验室耗材采购报销上报模板、智慧海洋实验室常规器材借用管理表 … https://solorg.netlify.app/blog/%E6%99%BA%E6%85%A7%E6%B5%B7%E6%B4%8B%E5%AE%9E%E9%AA%8C%E5%AE%A4%E5%8F%91%E5%B8%83%E6%96%B0%E7%89%88%E5%AE%9E%E9%AA%8C%E5%AE%A4%E7%AE%A1%E7%90%86%E8%A7%84%E8%8C%832023-%EF%B8%8F%E6%99%BA%E6%85%A7%E6%B5%B7%E6%B4%8B%E5%AE%9E%E9%AA%8C%E5%AE%A4/","blog MasterBall | 大师球双形态机器人 随着智能机器人行业的快速发展，地面作业对机器人的依赖也越来越高。面对实际情况中的复杂地形，球-腿双形态机器人兼具球形机器人快速运动和多足机器人高避障能力的特点，具有更强的适应能力，是突破当前 … https://solorg.netlify.app/blog/masterball-%E5%A4%A7%E5%B8%88%E7%90%83%E5%8F%8C%E5%BD%A2%E6%80%81%E6%9C%BA%E5%99%A8%E4%BA%BA-%EF%B8%8F%E6%99%BA%E6%85%A7%E6%B5%B7%E6%B4%8B%E5%AE%9E%E9%AA%8C%E5%AE%A4/","blog “腾蛇号”面向极地季节性冰区的两栖航行器 水空两栖探测航行器分为两部分，分别是水下观测的自主遥控水下机器人（ARV）以及携带ARV飞抵目标海域的八旋翼无人机。通过八旋翼的绞盘收纳装置实现ARV的自主收纳与释放过程。可对极地季节性冰区、北温带海冰等人类及传统水下观测航行器难以抵达的海域进行海空一体探测。 https://solorg.netlify.app/blog/dragon/","blog 基于Mnist Fashion数据集的卷积神经网络 构建卷积神经网络模型（CNN）对fashion-mnist数据集进行分类(10类)。 https://solorg.netlify.app/blog/mnist/","gallery Galleries  https://solorg.netlify.app/gallery/"]</script>
 </div>
 </div>
 </main>
