--- a/gallery/elec/index.html
+++ b/gallery/elec/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv=refresh content="0; url=https://raiots.github.io/solweb/#elec">
+<meta http-equiv=refresh content="0; url=https://solorg.netlify.app#elec">
