deploy: a0297c8ed13b2395f982b8f8d96dc7adee777430

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ https://solorg.netlify.app/mllogo-600x.png 600w" alt=机器学习与视觉>
 <div class=modal-content>
 <h2>机器学习与视觉</h2>
 <article class=entry-content>
-<p>为实验室提供目标检测算法等深度学习的工程实现与应用、上位机程序开发、实验室网站运维等工作。主要技术栈：Pytorch、Python、Go、C、Linux运维</p>
+<p>为实验室提供目标检测算法等深度学习的工程实现与应用、上位机程序开发、实验室网站运维等工作。主要技术栈：Pytorch、Python、Go、C、Linux及网站运维</p>
 </article>
 <div class="row center-xs">
 </div>
